[package]
name = "esp32-std-interrupt"
version = "0.1.0"
authors = ["Emeric Martineau <11473190+emeric-martineau@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "hal", "esp-idf-sys/native"]
pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["embedded-svc", "esp-idf-svc"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal/std", "esp-idf-svc?/std"]
alloc = ["embedded-svc?/alloc", "esp-idf-hal/alloc", "esp-idf-svc?/alloc"]
nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = ["esp-idf-hal/embassy-sync", "esp-idf-hal/critical-section", "esp-idf-svc?/embassy-time-driver", "esp-idf-svc?/embassy-time-isr-queue"]

[dependencies]
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.33", features = ["binstart"]  }
esp-idf-hal = { version = "0.42.1" }
esp-idf-svc = { version = "0.47.1", optional = true, default-features = false }
embedded-svc = { version = "0.26.1", optional = true, default-features = false }
edge-executor = { version = "0.4.0", optional = true, default-features = false }
anyhow = "1.0.75"
embedded-hal = "0.2.7"

[build-dependencies]
embuild = "0.31.3"
